<resources>
    <string name="app_name">FluxronApp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- Activity titles -->
    <string name="activity_kitchen_overview">Kitchen overview</string>
    <string name="activity_create_kitchen">Create a kitchen</string>
    <string name="activity_find_a_kitchen">Find a kitchen</string>
    <string name="activity_kitchen_settings">Kitchen settings</string>
    <string name="activity_kitchen_imp">Import a kitchen</string>
    <string name="activity_application_settings">Application settings</string>
    <!-- Help texts -->
    <string name="no_image_here">No image here. Tap this to take a snapshot.</string>

    <!-- Device tab titles -->
    <string name="device_tab_status">Status</string>
    <string name="device_tab_usage">Usage</string>
    <string name="device_tab_errors">Errors</string>
    <string name="device_tab_params">Config</string>

    <!-- Device List -->
    <string name="btn_pause_discovery">Pause Discovery</string>
    <string name="btn_start_discovery">Start Discovery</string>
    <string name="btn_pair">pair</string>
    <string name="btn_add">add</string>
    <string name="discovery_active">Device Discovery active&#8230;</string>

    <!-- Single characters -->
    <string name="ok_check">&#10003;</string>
    <string name="unkown_check">"?"</string>
    <string name="fail_check">"X"</string>

    <!-- Editable Parameter -->
    <string name="saveButton">Save Changes</string>
    <string name="resetButton">Reset</string>

    <!-- Settings Texts -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="emptyUser">Username can\'t be empty</string>
    <string name="emptyPassword">Password can\'t be empty</string>
    <string name="emptyUserAndPassword">Username and password can\'t be empty</string>

    <!-- Device Status Texts -->
    <string name="device_status_not_connected">Not connected</string>
    <string name="device_status_connected">Connected. Last update:</string>
    <string name="device_status_failed">Connection failed.</string>

    <!-- Other texts -->
    <string name="device_count">%d device(s)</string>
    <string name="kitchen_property_name">Name</string>
    <string name="kitchen_property_description">Description</string>
    <string name="kitchen_property_export_date">Exported</string>
    <string name="history_uptime">Uptime</string>
    <string name="history_heatsink">Heatsink Temperature</string>
    <string name="history_glass">Glass Temperature</string>
    <string name="export_kitchen">Share via EMail</string>
    <string name="hoursAgo"> hours ago</string>
    <string name="fieldDoesNotExist">field unavailable</string>
    <string name="kitchen_image">Picture to identify the kitchen</string>
    <string name="create_kitchen">Create &gt;</string>
    <string name="device_name_default">Device Name</string>
    <string name="device_address_default">00:11:22:33:44:55:66</string>
    <string name="kitchen_settings">edit kitchen settings</string>
    <string name="area_edit">edit kitchen area</string>
    <string name="kitchen_delete">delete kitchen or area</string>
    <string name="app_settings">edit app settings</string>
    <string name="kitchen_search_hint">search by name</string>
    <string name="device_type_default">\?\?\?</string>
    <string name="device_cancel_deletion">x</string>
    <string name="error_code_default">E00</string>
    <string name="error_text_default">Error text</string>
    <string name="error_time_default">0d 00:00:00</string>
    <string name="param_name_default">Coil Setup</string>
    <string name="param_value">value missing</string>
    <string name="temperature_bar_title">Temperature</string>
    <string name="temperature_bar_temp">175 °C</string>
    <string name="percentage_zero">0%</string>
    <string name="card_description">area card</string>
    <string name="kitchen_description">kitchen image</string>
    <string name="kitchen_name_default">kitchen name</string>
    <string name="import_yes">Import</string>
    <string name="import_cancel">Cancel</string>
    <string name="import_collision_warning">This kitchen is already stored, only import it if you know that this version is newer!</string>
    <string name="import_progress">%1$d / %2$d</string>
    <string name="unsupported_device">The user interface for this device type has not been implemented yet.</string>
    <string name="etx_config_profile">Profile</string>
    <string name="etx_config_profile_1">Profile 1 (active on device)</string>
    <string name="etx_config_info_text">ETX devices support 4 profiles. These profiles can be configured here. In order to activate a different profile you\'ll need to change a hardware setting.</string>
    <string name="basic_config">Basic Configuration</string>
    <string name="advanced_config">Advanced Configuration</string>
    <string name="coil_setup">Coil Setup</string>
    <string name="power_max">Power Max</string>
    <string name="keep_warm">Keep Warm</string>
    <string name="no_errors">This device has been running without any errors.</string>
    <string name="no_view_found">This view is not implemented yet.</string>
    <string name="please_authenticate">In order to use this application you need to set your login information in the application settings.</string>

    <!-- ErrorCodes -->
    <string name="error_description_prefix">error_description_</string>
    <string name="error_description_e00">No error</string>
    <string name="error_description_e01">No pan detected</string>
    <string name="error_description_e02">Coil current limit exceeded</string>
    <string name="error_description_e03">Device temperature limit exceeded</string>
    <string name="error_description_e04">Empty pan protection activated</string>
    <string name="error_description_e05">Knob malfunction</string>
    <string name="error_description_e06">Maximum usage hours exceeded</string>
    <string name="error_description_e07">IGBT temperature sensor error</string>
    <string name="error_description_e08">Device temperature too high</string>
    <string name="error_description_e09">Cooktop temperature too high</string>
    <string name="error_description_e10">Input voltage too low</string>
    <string name="error_description_e11">Communication error</string>
    <string name="error_description_e12">Cooktop temperature too high</string>
    <string name="error_description_e13">Temperature sensor error</string>
    <string name="error_description_e14">Contact the device manufacturer</string>
    <string name="error_description_e15">Cooktop interference</string>
    <string name="error_description_e16">Contact the device manufacturer</string>
    <string name="error_description_e17">Power management error</string>
    <string name="error_description_e18">Contact the device manufacturer</string>
    <string name="error_description_e19">Generator to coil cable error</string>

    <!-- Spool Spinner -->
    <string name="spool_prompt">Choose a configuration</string>
    <string-array name="spool_spinner">
        <item>custom configuration</item>
        <item>Ø 240mm / 3.5kW</item>
        <item>Ø 240mm / 5kW</item>
        <item>Wok 300mm / 3.5kW</item>
        <item>Wok 300mm / 5kW</item>
        <item>Wok 300mm / 8kW</item>
        <item>Ø 270mm / 3.5kW</item>
        <item>Ø 270mm / 5kW</item>
        <item>2x ▢130x270mm / 5kW</item>
        <item>Ø 270mm / 8kW</item>
        <item>2x ▢130x270mm / 8kW</item>
        <item>4x ▢130 / 8kW</item>
        <item>Ø 305mm / 5kW</item>
        <item>2x ▢145x305mm / 5kW</item>
        <item>▢305mm / 8kW</item>
        <item>Ø 305mm / 8kW</item>
        <item>2x ▢145x305mm / 8kW</item>
        <item>4x ▢145mm / 8kW</item>
        <item>▢185x385mm / 3.5kW</item>
        <item>Wok 400mm / 8kW</item>
        <item>4x ▢160mm / 8kW</item>
    </string-array>

    <!-- Thermostat Config -->
    <string name="desc_nominalCurrent">Nominal phase current in ampere</string>
    <string name="desc_tempHighLimit">Limit for operation counter "Temp High Time"</string>
    <string name="desc_TempMaxLimit">Maximal allowed temperature</string>
    <string name="desc_NegGradientLimit">Limit for operation counter "Temp. gradient neg"</string>
    <string name="desc_PosGradientLimit">Limit for operation counter "Temp. gradient pos"</string>
    <string name="desc_ReferenceTemperatureAt90">Desired temperature at knob angle of 90°</string>
    <string name="desc_ReferenceTemperatureAt270">Desired temperature at knob angle of 270°</string>
    <string name="desc_DisplayHysteresis">Use values>2 to avoid flickering</string>
    <string name="desc_TemperatureOffset">Decrease if temperature is too low</string>
    <string name="desc_PTSensorConfig">PT supervision Bit10: \n1=PT0\n2=PT01\n3=PT012</string>
    <string name="desc_SwitchingHysteresis">Time limit for maximum switching hysteresis</string>
    <string name="desc_SwitchingHysteresisLength">Time of hysteresis for switching</string>
    <string name="desc_TempGradientFeedForward">Calculate: overshoot[°C] * heatup[s] / setpoint[°C]</string>

    <!-- validation erors -->
    <string name="validation_error_no_name">Please provide a name for this kitchen.</string>
    <string name="validation_error_no_image">Please provide an image for this kitchen.</string>

    <!-- help text -->
    <string name="help_change_settings">Use the settings icon to change the name or the description of this kitchen.</string>
    <string name="help_add_area">Use this button to add new photos. You can then place the devices on the photo.</string>

    <!-- Alert dialog titles and messages -->
    <string name="alert_delete_kitchen_title">Confirm deletion</string>
    <string name="alert_delete_kitchen_message">This deletes this kitchen with all its areas and devices permanently. Do you want to proceed?</string>

    <string name="alert_delete_area_title">Confirm deletion</string>
    <string name="alert_delete_area_message">This deletes this area with all its devices permanently. Do you want to proceed?</string>
</resources>
