<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/kitchenList"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

    <android.support.design.widget.AppBarLayout
        android:layout_height="137dp"
        android:layout_width="match_parent"
        style="@style/FluxronAppBar"
        >

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_create_kitchen"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/transparent"
            android:visibility="gone">
        </android.support.v7.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="9dp"
            android:layout_marginRight="9dp"
            android:layout_marginBottom="9dp"
            android:layout_marginTop="35dp">
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_find_a_kitchen"
                    style="@style/FluxronTitleTextView"/>
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content">
                    <ImageButton
                        style="@style/FluxronImageButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_settings"
                        android:layout_alignParentEnd="true"
                        android:onClick="onSettingsButtonClicked"
                        android:id="@+id/settingsButton"
                        android:animateLayoutChanges="true"
                        android:contentDescription="@string/app_settings"/>
                </RelativeLayout>
            </LinearLayout>
            <EditText
                android:layout_width="match_parent"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                style="@style/FluxronSearchBar"
                android:id="@+id/kitchenName"
                android:singleLine="true"
                android:drawableStart="@drawable/ic_search"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:drawablePadding="8dp"
                android:hint="@string/kitchen_search_hint"/>
        </LinearLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="navigateCreate"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        app:layout_anchor="@id/kitchenList"
        app:layout_anchorGravity="bottom|right|end"
        android:src="@drawable/ic_action_add"
        />
</android.support.design.widget.CoordinatorLayout>